# python-api-core

./: .gitignore  .pre-commit-config.yaml  .repo-metadata.json  CHANGELOG.md  CONTRIBUTING.rst  README.rst  export_to_bigquery.py  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  synth.metadata  synth.py
.github/: CODEOWNERS  release-please.yml  sync-repo-settings.yaml
.github/workflows/: docs.yml  lint.yml  mypy.yml  unittest.yml  unittest_lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
docs/: auth.rst  conf.py  operation.rst
google/api_core/: __init__.py  _python_package_support.py  _python_version_support.py  _rest_streaming_base.py  bidi.py  bidi_async.py  bidi_base.py  client_info.py  client_logging.py  client_options.py  datetime_helpers.py  exceptions.py  extended_operation.py  general_helpers.py  grpc_helpers.py  grpc_helpers_async.py  iam.py  metrics_tracer.py  metrics_tracer_factory.py  operation.py  operation_async.py  page_iterator.py  page_iterator_async.py  path_template.py  protobuf_helpers.py  rest_helpers.py  rest_helpers_async.py  rest_streaming.py  rest_streaming_async.py  retry.py  retry_async.py  retry_streaming.py  retry_streaming_async.py  timeout.py  universe.py  universe_domain.py  universe_helpers.py  version.py  version_header.py
google/api_core/future/: async_future.py  polling.py
google/api_core/gapic_v1/: __init__.py  client_info.py  config.py  config_async.py  method.py  method_async.py  routing_header.py
google/api_core/operations_v1/: __init__.py  abstract_operations_async_client.py  abstract_operations_base_client.py  abstract_operations_client.py  operations_async_client.py  operations_client.py  operations_client_config.py  operations_rest_client.py  operations_rest_client_async.py  pagers.py  pagers_async.py  pagers_base.py
google/api_core/retry/: __init__.py  retry_base.py  retry_streaming.py  retry_streaming_async.py  retry_unary.py  retry_unary_async.py
metric_sample/: compute.py  kms.py
pytype_output/: .ninja_log  build.ninja
pytype_output/imports/: google.api_core.bidi.imports  google.api_core.exceptions.imports  google.api_core.future.__init__.imports  google.api_core.future.async_future.imports  google.api_core.future.polling.imports  google.api_core.gapic_v1.__init__.imports  google.api_core.gapic_v1.client_info.imports  google.api_core.gapic_v1.config.imports  google.api_core.gapic_v1.config_async.imports  google.api_core.gapic_v1.method.imports  google.api_core.gapic_v1.method_async.imports  google.api_core.grpc_helpers.imports  google.api_core.grpc_helpers_async.imports  google.api_core.operation.imports  google.api_core.operation_async.imports  google.api_core.operations_v1.__init__.imports  google.api_core.operations_v1.operations_async_client.imports  google.api_core.operations_v1.operations_client.imports  google.api_core.page_iterator_async.imports  google.api_core.retry.imports  google.api_core.retry_async.imports  google.api_core.timeout.imports
pytype_output/pyi/google/: __init__.pyi
scripts/readme-gen/templates/: install_deps.tmpl.rst
testing/: constraints-2.7.txt  constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt  constraints-3.9.txt  constraints-async-rest-3.7.txt  constraints-async-rest-3.8.txt
tests/: conftest.py  helpers.py
tests/asyncio/: test_bidi_async.py  test_grpc_helpers_async.py  test_operation_async.py  test_page_iterator_async.py  test_rest_streaming_async.py  test_retry_async.py  test_retry_streaming_async.py
tests/asyncio/future/: test_async_future.py
tests/asyncio/gapic/: test_config_async.py  test_method_async.py
tests/asyncio/operations_v1/: test_operations_async_client.py
tests/asyncio/retry/: test_exception_chain_preservation.py  test_retry_streaming_async.py  test_retry_unary_async.py
tests/unit/: test_bidi.py  test_client_info.py  test_client_logging.py  test_client_options.py  test_datetime_helpers.py  test_exceptions.py  test_extended_operation.py  test_grpc_helpers.py  test_iam.py  test_metrics_tracer.py  test_metrics_tracer_factory.py  test_operation.py  test_page_iterator.py  test_path_template.py  test_protobuf_helpers.py  test_python_package_support.py  test_python_version_support.py  test_rest_helpers.py  test_rest_streaming.py  test_rest_streaming_async.py  test_retry.py  test_retry_streaming.py  test_timeout.py  test_universe.py  test_universe_helpers.py
tests/unit/future/: test__helpers.py  test_polling.py
tests/unit/gapic/: test_client_info.py  test_method.py  test_routing_header.py
tests/unit/retry/: test_retry_base.py  (+3 more)
(+41 files in other folders)
