[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-api-core"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
readme = "README.rst"
classifiers = [
  # Should be one of:
  # "Development Status :: 3 - Alpha"
  # "Development Status :: 4 - Beta"
  # "Development Status :: 5 - Production/Stable"
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  "googleapis-common-protos >= 1.56.2, < 2.0.dev0",
  "protobuf>=3.19.5,<6.0.0.dev0,!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5",
  "proto-plus >= 1.22.3, <2.0.0dev",
  "google-auth >= 2.14.1, < 3.0.dev0",
  "requests >= 2.18.0, < 3.0.0.dev0",
]
dynamic = ["version"]

[project.optional-dependencies]
async_rest = ["google-auth[aiohttp] >= 2.35.0, < 3.0.dev0"]
grpc = [
  "grpcio >= 1.33.2, < 2.0dev",
  "grpcio >= 1.49.1, < 2.0dev; python_version>='3.11'",
  "grpcio-status >= 1.33.2, < 2.0.dev0",
  "grpcio-status >= 1.49.1, < 2.0.dev0; python_version>='3.11'",
]
grpcgcp = ["grpcio-gcp >= 0.2.2, < 1.0.dev0"]
grpcio-gcp = ["grpcio-gcp >= 0.2.2, < 1.0.dev0"]

[tool.setuptools.dynamic]
version = { attr = "google.api_core.version.__version__" }
