# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-api-core"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
readme = "README.rst"
description = "Google API client core library"
classifiers = [
  # Should be one of:
  # "Development Status :: 3 - Alpha"
  # "Development Status :: 4 - Beta"
  # "Development Status :: 5 - Production/Stable"
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  "googleapis-common-protos >= 1.56.2, < 2.0.dev0",
  "protobuf >= 3.19.5, < 6.0.0.dev0, != 3.20.0, != 3.20.1, != 4.21.0, != 4.21.1, != 4.21.2, != 4.21.3, != 4.21.4, != 4.21.5",
  "proto-plus >= 1.22.3, < 2.0.0dev",
  "proto-plus >= 1.25.0, < 2.0.0dev; python_version >= '3.13'",
  "google-auth >= 2.14.1, < 3.0.dev0",
  "requests >= 2.18.0, < 3.0.0.dev0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://googleapis.dev/python/google-api-core/latest/"
Repository = "https://github.com/googleapis/python-api-core"

[project.optional-dependencies]
async_rest = ["google-auth[aiohttp] >= 2.35.0, < 3.0.dev0"]
grpc = [
  "grpcio >= 1.33.2, < 2.0dev",
  "grpcio >= 1.49.1, < 2.0dev; python_version >= '3.11'",
  "grpcio-status >= 1.33.2, < 2.0.dev0",
  "grpcio-status >= 1.49.1, < 2.0.dev0; python_version >= '3.11'",
]
grpcgcp = ["grpcio-gcp >= 0.2.2, < 1.0.dev0"]
grpcio-gcp = ["grpcio-gcp >= 0.2.2, < 1.0.dev0"]

[tool.setuptools.dynamic]
version = { attr = "google.api_core.version.__version__" }

[tool.setuptools.packages.find]
# Only include packages under the 'google' namespace. Do not include tests,
# benchmarks, etc.
include = ["google*"]
